--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Kieran Duffy</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7faff22044.js" crossorigin="anonymous"></script>
@@ -36,9 +36,11 @@
 
     <section class="main-area">
         <div class="left-section">
-            <img src="images/Avatar.png" alt="Avatar">
-            <h1>Hi, I am Kieran Duffy</h1>
-            <p>Student Software Developer</p>
+            <div class="intro">
+                <img src="images/my-avatar.png" alt="Avatar">
+                <h1>Hi, I am<br>Kieran Duffy</h1>
+                <p>Student Software Developer</p>
+            </div>
         </div>
         <div class="right-section">
 
