--- a/index.html
+++ b/index.html
@@ -37,12 +37,22 @@
     <section class="main-area">
         <div class="left-section">
             <div class="intro">
-                <img src="images/my-avatar.png" alt="Avatar">
-                <h1>Hi, I am<br>Kieran Duffy</h1>
-                <p>Student Software Developer</p>
+                <div class="intro-img"><img src="images/avatar.png" alt="Avatar"></div>
+                <div class="intro-h1"><h1>Hi, I am<br>Kieran Duffy</h1></div>
+                <div class="intro-p"><p>Student Software Developer</p></div>
             </div>
         </div>
         <div class="right-section">
+
+            <div id="color-options">
+                <div id="blue" class="square"></div>
+                <div id="purple" class="square"></div>
+                <div  class="square pink"></div>
+                <div id="green" class="square"></div>
+                <div id="black" class="square"></div>
+                <div  class="square pink"></div>
+                <div id="dark" class="square"></div>
+            </div>
 
         </div>
     </section>
