--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navigation">
 
         <ul class="left-nav">
-            <li><span id="name">Kieran Duffy</span></li>
+            <li id="name">Kieran Duffy</li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Resume</a></li>
@@ -38,7 +38,7 @@
         <div class="left-section">
             <div class="intro">
                 <div class="intro-img"><img src="images/avatar.png" alt="Avatar"></div>
-                <div class="intro-h1"><h1>Hi, I am<br>Kieran Duffy</h1></div>
+                <div class="intro-h1"><h1>Hi, I am<br>Kieran</h1></div>
                 <div class="intro-p"><p>Student Software Developer</p></div>
             </div>
         </div>
@@ -47,13 +47,48 @@
             <div id="color-options">
                 <div id="blue" class="square"></div>
                 <div id="purple" class="square"></div>
-                <div  class="square pink"></div>
+                <div class="square pink"></div>
                 <div id="green" class="square"></div>
                 <div id="black" class="square"></div>
-                <div  class="square pink"></div>
+                <div class="square pink"></div>
                 <div id="dark" class="square"></div>
             </div>
 
+        </div>
+    </section>
+
+    <!--Projects-->
+
+    <section>
+        <h2 class="headings">Projects</h2>
+        <div class="projects">
+            <div id="library">
+                <div class="text">
+                    <h3>Library System</h3>
+                    <p>
+                        Languages used: C#, SQL
+                    </p>
+                    <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+                </div>
+            </div>
+            <div id="tax-calculator">
+                <div class="text">
+                    <h3>Tax Calculator</h3>
+                    <p>
+                        Languages used: Java
+                    </p>
+                    <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+                </div>
+            </div>
+            <div id="portfolio-website">
+                <div class="text">
+                    <h3>Portfolio Website</h3>
+                    <p>
+                        Languages used: HTML, CSS, JavaScript
+                    </p>
+                    <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+                </div>
+            </div>
         </div>
     </section>
 
