--- a/index.html
+++ b/index.html
@@ -9,107 +9,138 @@
 
 </head>
 <body>
-    <!-- nav bar -->
-    <nav class="navigation">
+<!-- nav bar -->
+<nav class="navigation">
 
-        <ul class="left-nav">
-            <li id="name">Kieran Duffy</li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Resume</a></li>
-        </ul>
+    <ul class="left-nav">
+        <li id="name">Kieran Duffy</li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Resume</a></li>
+    </ul>
 
-        <ul class="right-nav">
-            <li>
-                <a href="#">
-                    <i class="fa fa-linkedin-square fa-3x"></i>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="fab fa-github-square fa-3x"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    <ul class="right-nav">
+        <li>
+            <a href="#">
+                <i class="fa fa-linkedin-square fa-3x"></i>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fab fa-github-square fa-3x"></i>
+            </a>
+        </li>
+    </ul>
+</nav>
 
-    <!-- main area -->
+<!-- main area -->
 
-    <section class="main-area">
-        <div class="left-section">
-            <div class="intro">
-                <div class="intro-img" data-aos="zoom-in-right"><img src="images/Avatar.png" alt="Avatar"></div>
-                <div class="intro-h1" data-aos="fade-down"><h1>Hi, I am<br>Kieran</h1></div>
-                <div class="intro-p" data-aos="zoom-in-up"><p>Student Software Developer</p></div>
-            </div>
+<section class="main-area">
+    <div class="left-section">
+        <div class="intro">
+            <div class="intro-img" data-aos="zoom-in-right"><img src="images/Avatar.png" alt="Avatar"></div>
+            <div class="intro-h1" data-aos="fade-down"><h1>Hi, I am<br>Kieran</h1></div>
+            <div class="intro-p" data-aos="zoom-in-up"><p>Student Software Developer</p></div>
         </div>
-        <div class="right-section">
+    </div>
+    <div class="right-section">
 
-            <div id="color-options" data-aos="flip-right">
-                <div id="blue" class="square"></div>
-                <div id="purple" class="square"></div>
-                <div class="square pink"></div>
-                <div id="green" class="square"></div>
-                <div id="black" class="square"></div>
-                <div class="square pink"></div>
-                <div id="dark" class="square"></div>
-            </div>
-
-        </div>
-    </section>
-
-    <!--Projects-->
-
-    <section id="projects-section" data-aos="fade-up">
-
-        <h2 id="projects-heading"></h2>
-        <div class="blocks">
-            <div id="library" data-aos="zoom-in-up">
-                <div class="text">
-                    <h3>Library System</h3>
-                    <p>
-                        Languages used: C#, SQL
-                    </p>
-                    <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
-                </div>
-            </div>
-            <div id="tax-calculator" data-aos="zoom-in-up">
-                <div class="text">
-                    <h3>Tax Calculator</h3>
-                    <p>
-                        Languages used: Java
-                    </p>
-                    <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
-                </div>
-            </div>
-            <div id="portfolio-website" data-aos="zoom-in-up">
-                <div class="text">
-                    <h3>Portfolio Website</h3>
-                    <p>
-                        Languages used: HTML, CSS, JavaScript
-                    </p>
-                    <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="skills-section">
-        <h2 id="skills-heading">Skills</h2>
-
-        <div class="blocks">
-            <p>I am currently studying for a Bachelor of Science in Computing with Software Development
-                at Munster Technological University.<br>The following are some skills which I have learned
-                and looking to master:</p>
+        <div id="color-options" data-aos="flip-right">
+            <div id="blue" class="square"></div>
+            <div id="purple" class="square"></div>
+            <div class="square pink"></div>
+            <div id="green" class="square"></div>
+            <div id="black" class="square"></div>
+            <div class="square pink"></div>
+            <div id="dark" class="square"></div>
         </div>
 
-    </section>
+    </div>
+</section>
 
+<!--Projects-->
 
-    <script src="https://kit.fontawesome.com/7faff22044.js" crossorigin="anonymous"></script>
-    <script src="javascript/aos.js"></script>
-    <script src="javascript/main.js"></script>
+<section id="projects-section" data-aos="fade-up">
 
+    <h2 id="projects-heading"></h2>
+    <div class="blocks">
+        <div id="library" data-aos="zoom-in-up">
+            <div class="text">
+                <h3>Library System</h3>
+                <p>
+                    Languages used: C#, SQL
+                </p>
+                <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+        <div id="tax-calculator" data-aos="zoom-in-up">
+            <div class="text">
+                <h3>Tax Calculator</h3>
+                <p>
+                    Languages used: Java
+                </p>
+                <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+        <div id="portfolio-website" data-aos="zoom-in-up">
+            <div class="text">
+                <h3>Portfolio Website</h3>
+                <p>
+                    Languages used: HTML, CSS, JavaScript
+                </p>
+                <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--Skills-->
+<section id="skills-section" data-aos="fade-up">
+    <h2 id="skills-heading">Skills</h2>
+
+    <div class="blocks">
+        <p>I am currently studying for a Bachelor of Science in Computing with Software Development
+            at Munster Technological University. The following are some skills which I have learned
+            and looking to master:
+        <div class="cards">
+            <div>
+                <i class="fab fa-html5 fa-10x"></i>
+                <h3>HTML</h3>
+            </div>
+            <div>
+                <i class="fab fa-css3-alt fa-10x"></i>
+                <h3>CSS</h3>
+            </div>
+            <div>
+                <i class="fab fa-js fa-10x"></i>
+                <h3>JavaScript</h3>
+            </div>
+            <div>
+                <i class="fab fa-java fa-10x"></i>
+                <h3>Java</h3></div>
+            <div>
+                <i class="fab fa-css3-alt fa-10x"></i>
+                <h3>C#</h3>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<footer>
+    <p>&copy; 2021 Kieran Duffy</p>
+
+    <div id="right-footer">
+        <a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
+        <a href="#"><i class="fab fa-github-square fa-3x"></i></a>
+    </div>
+
+</footer>
+
+<script src="https://kit.fontawesome.com/7faff22044.js" crossorigin="anonymous"></script>
+<script src="javascript/aos.js"></script>
+<script src="javascript/main.js"></script>
 
 </body>
 </html>
