--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Kieran Duffy</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -39,7 +39,7 @@
     <div class="left-section">
         <div class="intro">
             <div class="intro-img" data-aos="zoom-in-right"><img src="images/Avatar.png" alt="Avatar"></div>
-            <div class="intro-h1" data-aos="fade-down"><h1>Hi, I am<br>Kieran</h1></div>
+            <div class="intro-h1" data-aos="fade-down"><h1>Hi, I am Kieran</h1></div>
             <div class="intro-p" data-aos="zoom-in-up"><p>Student Software Developer</p></div>
         </div>
     </div>
@@ -68,7 +68,7 @@
             <div class="text">
                 <h3>Library System</h3>
                 <p>
-                    Languages used: C#, SQL
+                    Languages: C# SQL
                 </p>
                 <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
             </div>
@@ -77,7 +77,7 @@
             <div class="text">
                 <h3>Tax Calculator</h3>
                 <p>
-                    Languages used: Java
+                    Languages: Java
                 </p>
                 <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
             </div>
@@ -86,7 +86,7 @@
             <div class="text">
                 <h3>Portfolio Website</h3>
                 <p>
-                    Languages used: HTML, CSS, JavaScript
+                    Languages: HTML CSS JavaScript
                 </p>
                 <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
             </div>
@@ -100,8 +100,8 @@
 
     <div class="blocks">
         <p>I am currently studying for a Bachelor of Science in Computing with Software Development
-            at Munster Technological University. The following are some skills which I have learned
-            and looking to master:
+            at Munster Technological University. The following are some skills which I am currently
+            learning and looking to improve:
         <div class="cards">
             <div>
                 <i class="fab fa-html5 fa-10x"></i>
