Links , scroll functionality in JavaScript

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <nav class="navigation">
 
     <ul class="left-nav">
-        <li id="name">Kieran Duffy</li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Resume</a></li>
+        <li id="name"><a href="index.html">Kieran Duffy</a></li>
+        <li><a id="projects-button">Projects</a></li>
+        <li><a id="skills-button">Skills</a></li>
+        <li><a href="CV.pdf" target="_blank">Resume</a></li>
     </ul>
 
     <ul class="right-nav">
         <li>
-            <a href="#">
+            <a href="https://linkedin.com/in/kieran-duffy1" target="_blank">
                 <i class="fa fa-linkedin-square fa-3x"></i>
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="https://github.com/kieranduffy1992" target="_blank">
                 <i class="fab fa-github-square fa-3x"></i>
             </a>
         </li>
@@ -38,7 +38,7 @@
 <section class="main-area">
     <div class="left-section">
         <div class="intro">
-            <div class="intro-img" data-aos="zoom-in-right"><img src="images/Avatar.png" alt="Avatar"></div>
+            <div class="intro-img" data-aos="zoom-in-right"><img src="images/Portrait.png" alt="Avatar"></div>
             <div class="intro-h1" data-aos="fade-down"><h1>Hi, I am Kieran</h1></div>
             <div class="intro-p" data-aos="zoom-in-up"><p>Student Software Developer</p></div>
         </div>
@@ -59,18 +59,27 @@
 </section>
 
 <!--Projects-->
-
+<div id="projects-alert"></div>
 <section id="projects-section" data-aos="fade-up">
 
     <h2 id="projects-heading"></h2>
     <div class="blocks">
+        <div id="nasa-app" data-aos="zoom-in-up">
+            <div class="text">
+                <h3>NASA API App</h3>
+                <p>
+                    Languages: HTML CSS JavaScript
+                </p>
+                <a href="https://github.com/kieranduffy1992/Nasa-API-App.git" target="_blank">View on Github <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
         <div id="library" data-aos="zoom-in-up">
             <div class="text">
                 <h3>Library System</h3>
                 <p>
                     Languages: C# SQL
                 </p>
-                <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+                <a href="https://github.com/kieranduffy1992/Library-System.git" target="_blank">View on Github <i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
         <div id="tax-calculator" data-aos="zoom-in-up">
@@ -79,19 +88,11 @@
                 <p>
                     Languages: Java
                 </p>
-                <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-        <div id="portfolio-website" data-aos="zoom-in-up">
-            <div class="text">
-                <h3>Portfolio Website</h3>
-                <p>
-                    Languages: HTML CSS JavaScript
-                </p>
-                <a href="#">View on Github <i class="fas fa-chevron-right"></i></a>
+                <a href="https://github.com/kieranduffy1992/Ireland-Tax-Calculator.git" target="_blank">View on Github <i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
     </div>
+
 </section>
 
 <!--Skills-->
@@ -119,7 +120,7 @@
                 <i class="fab fa-java fa-10x"></i>
                 <h3>Java</h3></div>
             <div>
-                <i class="fab fa-css3-alt fa-10x"></i>
+                <i class="fab fa-cuttlefish fa-10x"></i>
                 <h3>C#</h3>
             </div>
         </div>
@@ -132,8 +133,8 @@
     <p>&copy; 2021 Kieran Duffy</p>
 
     <div id="right-footer">
-        <a href="#"><i class="fa fa-linkedin-square fa-3x"></i></a>
-        <a href="#"><i class="fab fa-github-square fa-3x"></i></a>
+        <a href="https://linkedin.com/in/kieran-duffy1" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+        <a href="https://github.com/kieranduffy1992" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
     </div>
 
 </footer>
