new media queries and visual changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Kieran Duffy - Software Development Student">
+    <meta name="keyword" content="Portfolio, javascript, HTML, CSS, JAVA, SQL">
     <title>Kieran Duffy</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -13,7 +19,7 @@
 <nav class="navigation">
 
     <ul class="left-nav">
-        <li id="name"><a href="index.html">Kieran Duffy</a></li>
+        <li id="name"><a href="index.html">KD</a></li>
         <li><a id="projects-button">Projects</a></li>
         <li><a id="skills-button">Skills</a></li>
         <li><a href="CV.pdf" target="_blank">Resume</a></li>
@@ -37,25 +43,10 @@
 
 <section class="main-area">
     <div class="left-section">
-        <div class="intro">
-            <div class="intro-img" data-aos="zoom-in-right"><img src="images/Portrait.png" alt="Avatar"></div>
-            <div class="intro-h1" data-aos="fade-down"><h1>Hi, I am Kieran</h1></div>
-            <div class="intro-p" data-aos="zoom-in-up"><p>Student Software Developer</p></div>
-        </div>
+            <div  data-aos="fade-down"><h1>Kieran Duffy</h1></div>
+            <div data-aos="zoom-in-up"><p>Student Software Developer</p></div>
     </div>
-    <div class="right-section">
-
-        <div id="color-options" data-aos="flip-right">
-            <div id="blue" class="square"></div>
-            <div id="purple" class="square"></div>
-            <div class="square pink"></div>
-            <div id="green" class="square"></div>
-            <div id="black" class="square"></div>
-            <div class="square pink"></div>
-            <div id="dark" class="square"></div>
-        </div>
-
-    </div>
+    <div class="right-section"></div>
 </section>
 
 <!--Projects-->
