--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div id="projects-alert"></div>
 <section id="projects-section" data-aos="fade-up">
 
-    <h2 id="projects-heading"></h2>
+    <h2 id="projects-heading">Projects</h2>
     <div class="blocks">
         <div id="nasa-app" data-aos="zoom-in-up">
             <div class="text">
