--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li id="name"><a href="index.html">KD</a></li>
         <li><a id="projects-button">Projects</a></li>
         <li><a id="skills-button">Skills</a></li>
-        <li><a href="Resume.pdf" target="_blank">Resume</a></li>
+        <li><a href="CV.pdf" target="_blank">Resume</a></li>
     </ul>
 
     <ul class="right-nav">
